--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,16 +43,16 @@ incremental = true
 debug-assertions = true
 debug = true
 
-[patch.crates-io]
-ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
-ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-std = { git = "https://github.com/arkworks-rs/std/" }
+# [patch.crates-io]
+# ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
+# ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-std = { git = "https://github.com/arkworks-rs/std/" }
 
-ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra/" }
-ark-mnt6-298 = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra/" }
+# ark-mnt6-298 = { git = "https://github.com/arkworks-rs/algebra/" }
